[tool.poetry]
name = "mortgage-app"
version = "0.1.0"
description = ""
authors = ["Adebayo Akinlalu <aakinlalu@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9.8"
python-dotenv = "^0.19.2"
dataset = "^1.5.2"
fire = "^0.4.0"
psycopg2 = "^2.9.6"
databases = "^0.7.0"
fastapi = "^0.109.1"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
